--- a/index.html
+++ b/index.html
@@ -5,119 +5,103 @@
 <meta http-equiv="X-UA-Compatible"
 content="IE=edge">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"/>
+<link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css"/>
-<title>Joshua Faigan Portfolio</title>
+<link rel="icon" href="/images/potion.ico" type="image/x-icon">
+<title>Welcome To My Lab!</title>
 </head>
-<!-- Nav Bar including name at top left - nav links right-->
 <body>
-    <nav class="navbar">
-        <div class="container">
-            <div class="logo">Joshua Faigan - Software Developer</div>
-        <ul class ="nav">
-            <li>
-                <a href="#home">Home</a>
-            </li>
-            <li>
-                <a href="#about">About Me</a>
-            </li>
-            <li>
-                <a href="#skills">Skills</a>
-            </li>
-            <li>
-                <a href="#portfolio">Portfolio</a>
-            </li>
-            <li>
-                <a href="#contact">Contact Me</a>
-            </li>
-        </ul>
+<main>
+	<div class="book">
+		<div class="book-cover">
+			<div>
+				<h1>Joshua Faigan</h1>
+				<div class="separator"></div>
+				<h2>Developer</h2>
+			</div>
+		</div>
+		<div class="book-content">
+			<header>
+        <div class="header-container">
+          <h3>About Me</h3>
+          <p> Hi, I'm Josh. I'm an avid gamer, movie fanatic, and I enjoy working on my home lab. At work, I'm a quick learner, always on time, and eager to learn.</p>
         </div>
-    </nav>
-<!-- Header including about me and picture-->
-    <header class="header">
-        <div class="container">
-        <div id="about">
-            <h1>About me</h1>
-            <p>
-                My name is Joshua Faigan. I&apos;m a first year student at Dominican University
-    of California, and a Shopify DevDegree Intern. When I&apos;m not at school or at work,
-    I enjoy spending time with my two year old son Lex, and gaming with my friends.
-    My wife Josie and I met in middle school and started dating in high school.
-    We&apos;ve been together for 17 years and married for 4. My favourite song is
-    <cite>Anchor by Tritonal</cite>
-            </p>
+      </header>
+      <section id="skills">
+				<h3>Skills</h3>
+        <div class="skills-container">
+          <ul>
+						<li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="python logo"/></li>
+						<li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="javascript logo"/></li>
+						<li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/graphql/graphql-plain.svg" alt="graphql logo"/></li>
+						<li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/docker/docker-original.svg" alt="docker logo"/></li>
+						<li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/kubernetes/kubernetes-plain.svg" alt="kubernetes logo"/></li>
+					</ul>
         </div>
-            <img src="images/headshot.jpg" alt="Me" />
-        </div>
-    </header>
-<!--Skills section broken into 1 box for each skill-->
-    <section class="boxes" id="skills">
-        <div class="container">
-            <div class ="box">
-                <h2><strong>Adept</strong><i class="fa-solid fa-jet-fighter-up"></i></h2>
-                <p>
-                    I can learn at a quick pace
-                </p>
-            </div>
-            
-            <div class ="box">
-                <h2><strong>Punctual</strong><i class="fa-solid fa-clock"></i></h2>
-                <p>
-                    Always early or on time
-                </p>
-            </div>
-            
-            <div class ="box">
-                <h2><strong>Bilingual</strong><i class="fa-solid fa-language"></i></h2>
-                <p>
-                    English & French
-                </p>
-            </div>
+      </section>
+			<section id="portfolio">
+				<h3>Portfolio</h3>
+				<!-- Project 1 -->
+				<div class="project">
+					<h4>PokeBackpack</h4>
+					<p>Brief description of Project 1. This project involved...</p>
+					<a href="https://github.com/yourusername/project1" target="_blank">
+							<img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub logo" height="20" /> View on GitHub
+					</a>
+			</div>
+			<!-- Project 2 -->
+			<div class="project">
+					<h4>Lofi-Party</h4>
+					<p>Brief description of Project 2. This project was about...</p>
+					<a href="https://github.com/yourusername/project2" target="_blank">
+							<img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub logo" height="20" /> View on GitHub
+					</a>
+			</div>
+			<!-- Project 3 -->
+			<div class="project">
+					<h4>Plushie Profits</h4>
+					<p>Brief description of Project 3. In this project, I...</p>
+					<a href="https://github.com/yourusername/project3" target="_blank">
+							<img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub logo" height="20" /> View on GitHub
+					</a>
+			</div>
+			<!-- Project 4 -->
+			<div class="project">
+					<h4>TwiWarGen</h4>
+					<p>Brief description of Project 4. This was a collaboration...</p>
+					<a href="https://github.com/yourusername/project4" target="_blank">
+							<img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub logo" height="20" /> View on GitHub
+					</a>
+			</div>
+			<!-- Project 5 -->
+			<div class="project">
+				<h4>Kubernetes Tutorial</h4>
+				<p>Brief description of Project 4. This was a collaboration...</p>
+				<a href="https://github.com/yourusername/project4" target="_blank">
+						<img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub logo" height="20" /> View on GitHub
+				</a>
+		</div>
+			</section>
+			<section id="contact">
+					<a href="https://www.twitch.tv/evilgenius88" target="_blank">
+						<img src="https://img.shields.io/static/v1?message=Twitch&logo=twitch&label=&color=9146FF&logoColor=white&labelColor=&style=for-the-badge" height="35" alt="twitch logo"  />
+					</a>
+					<a href="https://discordapp.com/users/evil.genius" target="_blank">
+						<img src="https://img.shields.io/static/v1?message=Discord&logo=discord&label=&color=7289DA&logoColor=white&labelColor=&style=for-the-badge" height="35" alt="discord logo"  />
+					</a>
+					<a href="https://www.linkedin.com/in/josh-faigan-87169832/" target="_blank">
+						<img src="https://img.shields.io/static/v1?message=LinkedIn&logo=linkedin&label=&color=0077B5&logoColor=white&labelColor=&style=for-the-badge" height="35" alt="linkedin logo"  />
+					</a>
+			</section>
+			<section id="filler">
+				<p>
+					Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
 
-            <div class ="box">
-                <h2><strong>Finance</strong><i class="fa-solid fa-coins"></i></h2>
-                <p>
-                   Mortgages, Investments, Business Banking
-                </p>
-            </div>
-        </div>
-    </section>
- <!--Portfolio section including hyperlinks to projects-->
-    <section>
-        <div class="portfolio">
-            <h2>Please take a look at my portfolio. The projects below all run via <em>Docker Containers</em>.</h2>
-            <ul class="port">
-                <li><a href="https://cloud.octocloud.ca" target="_blank">Cloud Storage 8<abbr>TB</abbr> Capacity</a></li>
-                <li><a href="https://ombi.octocloud.ca" target="_blank">Movie/TV Requests</a></li>
-                <li><a href="https://portainer.octocloud.ca" target="_blank">Portainer Server</a></li>
-                <li><a href="https://games.octocloud.ca" target="_blank">Game Server Hosting</a></li>
-            </ul>
-        </div>
-    </section>
-<!-- Contact section including links to e-mail and social media-->
-    <section id="contact">
-        <div class="contact">
-            <h2>
-                Contact Me
-            </h2>
-            <h3>
-                Contact me via any of the following
-                or feel free to <em>follow</em> me on social media!
-            </h3>
-            <address>
-                <a href="mailto:joshua.faigan@students.dominican.edu">
-                <img src="https://cdn-icons-png.flaticon.com/128/3916/3916841.png" 
-                    width="25" height="25" alt="Email Me"></a>
-                <a href="https://github.com/EvilGenius13" target="_blank">
-                <img src="https://cdn-icons-png.flaticon.com/128/6424/6424084.png" 
-                    width="25" height="25" alt="Github"></a>
-                <a href="https://facebook.com/joshfaigan" target="_blank">
-                <img src="https://cdn-icons-png.flaticon.com/128/6422/6422199.png" 
-                    width="25" height="25" alt="Facebook"></a>
-                <a href="https://www.linkedin.com/in/josh-faigan-87169832/" target="_blank">
-                <img src="https://cdn-icons-png.flaticon.com/128/6422/6422202.png" 
-                        width="25" height="25" alt="LinkedIn"></a>
-            </address>
-        </div>    
-    </section>
+The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
+				</p>
+			</section>
+		</div>
+	</div>
+</main>
 </body>
 </html>
