--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ content="IE=edge">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"/>
 <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css"/>
-<link rel="icon" href="/images/potion.ico" type="image/x-icon">
+<link rel="icon" href="images/potion.ico" type="image/x-icon">
 <title>Welcome To My Lab!</title>
 </head>
 <body>
