changed about me

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@ content="IE=edge">
 			<header>
         <div class="header-container">
           <h3>About Me</h3>
-          <p> Hi, I'm Josh. I'm an avid gamer, movie fanatic, and I enjoy working on my home lab. At work, I'm a quick learner, always on time, and eager to learn.</p>
+          <p> <p>Salutations, I'm Josh, the alchemist of code and creativity. Much like an alchemist in search of the philosopher's stone, I'm constantly concocting digital elixirs in the realm of software development. As a seasoned gamer and cinephile, I've honed my skills in the art of storytelling, and I bring that passion to my work.</p>
+				</p>
         </div>
       </header>
       <section id="skills">
@@ -40,7 +41,7 @@ content="IE=edge">
         </div>
       </section>
 			<section id="portfolio">
-				<h3>Portfolio</h3>
+				<h3>Experiments</h3>
 				<!-- Project 1 -->
 				<div class="project">
 					<h4>PokeBackpack</h4>
