working on new css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ content="IE=edge">
 <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css"/>
 <link rel="icon" href="images/potion.ico" type="image/x-icon">
-<title>Welcome To My Lab!</title>
+<title>Wizard's Alcove</title>
 </head>
 <body>
 <main>
@@ -16,70 +16,65 @@ content="IE=edge">
 			<div>
 				<h1>Joshua Faigan</h1>
 				<div class="separator"></div>
-				<h2>Developer</h2>
+				<h2>Code Sorcerer</h2>
 			</div>
 		</div>
 		<div class="book-content">
 			<header>
         <div class="header-container">
-          <h3>About Me</h3>
-          <p> <p>Salutations, I'm Josh, the alchemist of code and creativity. Much like an alchemist in search of the philosopher's stone, I'm constantly concocting digital elixirs in the realm of software development. As a seasoned gamer and cinephile, I've honed my skills in the art of storytelling, and I bring that passion to my work.</p>
-				</p>
+          <h3>My Chronicle</h3>
+          <p>Hey, I'm Josh, the sorcerer of syntax and scribe of systems. Like a wizard in search of arcane knowledge, I delve into the realms of code, concocting digital spells to solve real-world enigmas. With a heart forged in the fires of gaming and cinema, I've mastered the craft of narrative, weaving it into my digital endeavors.</p>
         </div>
       </header>
       <section id="skills">
-				<h3>Skills</h3>
+				<h3>Arcane Arts</h3>
         <div class="skills-container">
           <ul>
 						<li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="python logo"/></li>
 						<li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="javascript logo"/></li>
 						<li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/graphql/graphql-plain.svg" alt="graphql logo"/></li>
+						<li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/ruby/ruby-original.svg" alt="ruby logo"/></li>
 						<li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/docker/docker-original.svg" alt="docker logo"/></li>
 						<li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/kubernetes/kubernetes-plain.svg" alt="kubernetes logo"/></li>
 					</ul>
         </div>
       </section>
 			<section id="portfolio">
-				<h3>Experiments</h3>
+				<h3>Mystic Creations</h3>
 				<!-- Project 1 -->
 				<div class="project">
+					<img src="/images/spell-book1.png" height="40">
 					<h4>PokeBackpack</h4>
-					<p>Brief description of Project 1. This project involved...</p>
-					<a href="https://github.com/yourusername/project1" target="_blank">
-							<img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub logo" height="20" /> View on GitHub
-					</a>
+					<p>A Flask based app where you can search pokemon and add them to your team</p>
+					<a href="https://github.com/yourusername/project2" target="_blank"> GitHub </a>
 			</div>
 			<!-- Project 2 -->
 			<div class="project">
+					<img src="/images/spell-book1.png" height="40">
 					<h4>Lofi-Party</h4>
-					<p>Brief description of Project 2. This project was about...</p>
-					<a href="https://github.com/yourusername/project2" target="_blank">
-							<img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub logo" height="20" /> View on GitHub
-					</a>
+					<p>A Websocket chat app running off Node</p>
+					<a href="https://github.com/yourusername/project2" target="_blank"> GitHub </a>
 			</div>
 			<!-- Project 3 -->
 			<div class="project">
+					<img src="/images/spell-book1.png" height="40">
 					<h4>Plushie Profits</h4>
-					<p>Brief description of Project 3. In this project, I...</p>
-					<a href="https://github.com/yourusername/project3" target="_blank">
-							<img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub logo" height="20" /> View on GitHub
-					</a>
+					<p>Ruby on Rails game for discord servers.</p>
+					<a href="https://github.com/yourusername/project2" target="_blank"> GitHub </a>
 			</div>
 			<!-- Project 4 -->
 			<div class="project">
+					<img src="/images/spell-book1.png" height="40">
 					<h4>TwiWarGen</h4>
-					<p>Brief description of Project 4. This was a collaboration...</p>
-					<a href="https://github.com/yourusername/project4" target="_blank">
-							<img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub logo" height="20" /> View on GitHub
-					</a>
+					<p>A markov generator that creates sentences from either the Twilight or World of Warcraft series.</p>
+					<a href="https://github.com/yourusername/project2" target="_blank"> GitHub </a>
 			</div>
 			<!-- Project 5 -->
 			<div class="project">
+				<img src="/images/spell-book1.png" height="40">
 				<h4>Kubernetes Tutorial</h4>
-				<p>Brief description of Project 4. This was a collaboration...</p>
-				<a href="https://github.com/yourusername/project4" target="_blank">
-						<img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub logo" height="20" /> View on GitHub
-				</a>
+				<p>A tutorial for those interested in learning the basics of kubernetes</p>
+				<a href="https://github.com/yourusername/project2" target="_blank"> GitHub </a>
 		</div>
 			</section>
 			<section id="contact">
