--- a/index.html
+++ b/index.html
@@ -1,102 +1,186 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible"
-content="IE=edge">
-<link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css"/>
-<link rel="icon" href="images/potion.ico" type="image/x-icon">
-<title>Wizard's Alcove</title>
-</head>
-<body>
-<main>
-	<div class="book">
-		<div class="book-cover">
-			<div>
-				<h1>Joshua Faigan</h1>
-				<div class="separator"></div>
-				<h2>Code Sorcerer</h2>
-			</div>
-		</div>
-		<div class="book-content">
-			<header>
-        <div class="header-container">
-          <h3>My Chronicle</h3>
-          <p>Hey, I'm Josh, the sorcerer of syntax and scribe of systems. Like a wizard in search of arcane knowledge, I delve into the realms of code, concocting digital spells to solve real-world enigmas. With a heart forged in the fires of gaming and cinema, I've mastered the craft of narrative, weaving it into my digital endeavors.</p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="images/staff.ico" type="image/x-icon" />
+    <title>Wizard's Alcove</title>
+  </head>
+  <body>
+    <main>
+      <div class="book">
+        <div class="book-cover">
+          <div>
+            <h1>Joshua Faigan</h1>
+            <div class="separator"></div>
+            <h2>Code Sorcerer</h2>
+          </div>
         </div>
-      </header>
-      <section id="skills">
-				<h3>Arcane Arts</h3>
-        <div class="skills-container">
-          <ul>
-						<li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="python logo"/></li>
-						<li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="javascript logo"/></li>
-						<li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/graphql/graphql-plain.svg" alt="graphql logo"/></li>
-						<li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/ruby/ruby-original.svg" alt="ruby logo"/></li>
-						<li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/docker/docker-original.svg" alt="docker logo"/></li>
-						<li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/kubernetes/kubernetes-plain.svg" alt="kubernetes logo"/></li>
-					</ul>
+        <div class="book-content">
+          <header>
+            <div class="header-container">
+              <h3>My Chronicle</h3>
+              <p>
+                Hey, I'm Josh, the sorcerer of syntax and scribe of systems.
+                Like a wizard in search of arcane knowledge, I delve into the
+                realms of code, concocting digital spells to solve real-world
+                enigmas. With a heart forged in the fires of gaming and cinema,
+                I've mastered the craft of narrative, weaving it into my digital
+                endeavors.
+              </p>
+            </div>
+          </header>
+          <section id="skills">
+            <h3>Arcane Arts</h3>
+            <div class="skills-container">
+              <ul>
+                <li>
+                  <img
+                    src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg"
+                    alt="python logo"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg"
+                    alt="javascript logo"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/graphql/graphql-plain.svg"
+                    alt="graphql logo"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/ruby/ruby-original.svg"
+                    alt="ruby logo"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/docker/docker-original.svg"
+                    alt="docker logo"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/kubernetes/kubernetes-plain.svg"
+                    alt="kubernetes logo"
+                  />
+                </li>
+              </ul>
+            </div>
+          </section>
+          <section id="portfolio">
+            <h3>Mystic Creations</h3>
+            <!-- Project 1 -->
+            <div class="project">
+              <a href="https://github.com/EvilGenius13/PokeBackpackFinal" target="_blank">
+                <img src="/images/spell-book1.png" alt="Project Image" class="project1-image" />
+              </a>
+              <h4>PokeBackpack</h4>
+              <p>
+                A Flask based app where you can search pokemon and add them to
+                your team
+              </p>
+            </div>
+            <!-- Project 2 -->
+            <div class="project">
+              <a href="https://github.com/EvilGenius13/lofi-party" target="_blank">
+                <img src="/images/spell-book6.png" alt="Project Image" class="project2-image" />
+              </a>
+              <h4>Lofi-Party</h4>
+              <p>A Websocket chat app running off Node</p>
+            </div>
+            <!-- Project 3 -->
+            <div class="project">
+              <a href="https://github.com/EvilGenius13/PlushieProfits" target="_blank">
+                <img src="/images/spell-book3.png" alt="Project Image" class="project3-image"/>
+              </a>
+              <h4>Plushie Profits</h4>
+              <p>Ruby on Rails game for discord servers.</p>
+            </div>
+            <!-- Project 4 -->
+            <div class="project">
+              <a href="https://github.com/EvilGenius13/ACS-1120-Intro-Data-Structures/tree/wip" target="_blank">
+                <img src="/images/spell-book4.png" alt="Project Image" class="project4-image"/>
+              </a>
+              <h4>TwiWarGen</h4>
+              <p>
+                A markov generator that creates sentences from either the
+                Twilight or World of Warcraft series.
+              </p>
+            </div>
+            <!-- Project 5 -->
+            <div class="project">
+              <a href="https://github.com/EvilGenius13/kubernetes-tutorial" target="_blank">
+                <img src="/images/spell-book5.png" alt="Project Image" class="project5-image"/>
+              </a>
+              <h4>Kubernetes Tutorial</h4>
+              <p>
+                A tutorial for those interested in learning the basics of
+                kubernetes
+              </p>
+            </div>
+          </section>
+          <section id="experience">
+            <h3>My Journey</h3>
+						<p>
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+              It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old. Richard McClintock, a Latin
+              professor at Hampden-Sydney College in Virginia, looked up one of
+              the more obscure Latin words, consectetur, from a Lorem Ipsum
+              passage, and going through the cites of the word in classical
+              literature, discovered the undoubtable source. Lorem Ipsum comes
+              from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et
+              Malorum" (The Extremes of Good and Evil) by Cicero, written in 45
+              BC. This book is a treatise on the theory of ethics, very popular
+              during the Renaissance. The first line of Lorem Ipsum, "Lorem
+              ipsum dolor sit amet..", comes from a line in section 1.10.32. The
+              standard chunk of Lorem Ipsum used since the 1500s is reproduced
+              below for those interested. Sections 1.10.32 and 1.10.33 from "de
+              Finibus Bonorum et Malorum" by Cicero are also reproduced in their
+              exact original form, accompanied by English versions from the 1914
+              translation by H. Rackham.
+            </p>
+          </section>
+					<section id="contact">
+            <h3>Connect</h3>
+						<a href="https://www.twitch.tv/evilgenius88" target="_blank">
+              <img
+                src="https://img.shields.io/static/v1?message=Twitch&logo=twitch&label=&color=9146FF&logoColor=white&labelColor=&style=for-the-badge"
+                height="35"
+                alt="twitch logo"
+              />
+            </a>
+            <a href="https://discordapp.com/users/evil.genius" target="_blank">
+              <img
+                src="https://img.shields.io/static/v1?message=Discord&logo=discord&label=&color=7289DA&logoColor=white&labelColor=&style=for-the-badge"
+                height="35"
+                alt="discord logo"
+              />
+            </a>
+            <a
+              href="https://www.linkedin.com/in/josh-faigan-87169832/"
+              target="_blank"
+            >
+              <img
+                src="https://img.shields.io/static/v1?message=LinkedIn&logo=linkedin&label=&color=0077B5&logoColor=white&labelColor=&style=for-the-badge"
+                height="35"
+                alt="linkedin logo"
+              />
+            </a>
+          </section>
         </div>
-      </section>
-			<section id="portfolio">
-				<h3>Mystic Creations</h3>
-				<!-- Project 1 -->
-				<div class="project">
-					<img src="/images/spell-book1.png" height="40">
-					<h4>PokeBackpack</h4>
-					<p>A Flask based app where you can search pokemon and add them to your team</p>
-					<a href="https://github.com/yourusername/project2" target="_blank"> GitHub </a>
-			</div>
-			<!-- Project 2 -->
-			<div class="project">
-					<img src="/images/spell-book1.png" height="40">
-					<h4>Lofi-Party</h4>
-					<p>A Websocket chat app running off Node</p>
-					<a href="https://github.com/yourusername/project2" target="_blank"> GitHub </a>
-			</div>
-			<!-- Project 3 -->
-			<div class="project">
-					<img src="/images/spell-book1.png" height="40">
-					<h4>Plushie Profits</h4>
-					<p>Ruby on Rails game for discord servers.</p>
-					<a href="https://github.com/yourusername/project2" target="_blank"> GitHub </a>
-			</div>
-			<!-- Project 4 -->
-			<div class="project">
-					<img src="/images/spell-book1.png" height="40">
-					<h4>TwiWarGen</h4>
-					<p>A markov generator that creates sentences from either the Twilight or World of Warcraft series.</p>
-					<a href="https://github.com/yourusername/project2" target="_blank"> GitHub </a>
-			</div>
-			<!-- Project 5 -->
-			<div class="project">
-				<img src="/images/spell-book1.png" height="40">
-				<h4>Kubernetes Tutorial</h4>
-				<p>A tutorial for those interested in learning the basics of kubernetes</p>
-				<a href="https://github.com/yourusername/project2" target="_blank"> GitHub </a>
-		</div>
-			</section>
-			<section id="contact">
-					<a href="https://www.twitch.tv/evilgenius88" target="_blank">
-						<img src="https://img.shields.io/static/v1?message=Twitch&logo=twitch&label=&color=9146FF&logoColor=white&labelColor=&style=for-the-badge" height="35" alt="twitch logo"  />
-					</a>
-					<a href="https://discordapp.com/users/evil.genius" target="_blank">
-						<img src="https://img.shields.io/static/v1?message=Discord&logo=discord&label=&color=7289DA&logoColor=white&labelColor=&style=for-the-badge" height="35" alt="discord logo"  />
-					</a>
-					<a href="https://www.linkedin.com/in/josh-faigan-87169832/" target="_blank">
-						<img src="https://img.shields.io/static/v1?message=LinkedIn&logo=linkedin&label=&color=0077B5&logoColor=white&labelColor=&style=for-the-badge" height="35" alt="linkedin logo"  />
-					</a>
-			</section>
-			<section id="filler">
-				<p>
-					Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
-
-The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
-				</p>
-			</section>
-		</div>
-	</div>
-</main>
-</body>
+      </div>
+    </main>
+  </body>
 </html>
