link issue change

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <!-- Project 1 -->
             <div class="project">
               <a href="https://github.com/EvilGenius13/PokeBackpackFinal" target="_blank">
-                <img src="/images/spell-book1.png" alt="Project Image" class="project1-image" />
+                <img src="images/spell-book1.png" alt="Project Image" class="project1-image" />
               </a>
               <h4>PokeBackpack</h4>
               <p>
@@ -94,7 +94,7 @@
             <!-- Project 2 -->
             <div class="project">
               <a href="https://github.com/EvilGenius13/lofi-party" target="_blank">
-                <img src="/images/spell-book6.png" alt="Project Image" class="project2-image" />
+                <img src="images/spell-book6.png" alt="Project Image" class="project2-image" />
               </a>
               <h4>Lofi-Party</h4>
               <p>A Websocket chat app running off Node</p>
@@ -102,7 +102,7 @@
             <!-- Project 3 -->
             <div class="project">
               <a href="https://github.com/EvilGenius13/PlushieProfits" target="_blank">
-                <img src="/images/spell-book3.png" alt="Project Image" class="project3-image"/>
+                <img src="images/spell-book3.png" alt="Project Image" class="project3-image"/>
               </a>
               <h4>Plushie Profits</h4>
               <p>Ruby on Rails game for discord servers.</p>
@@ -110,7 +110,7 @@
             <!-- Project 4 -->
             <div class="project">
               <a href="https://github.com/EvilGenius13/ACS-1120-Intro-Data-Structures/tree/wip" target="_blank">
-                <img src="/images/spell-book4.png" alt="Project Image" class="project4-image"/>
+                <img src="images/spell-book4.png" alt="Project Image" class="project4-image"/>
               </a>
               <h4>TwiWarGen</h4>
               <p>
@@ -121,7 +121,7 @@
             <!-- Project 5 -->
             <div class="project">
               <a href="https://github.com/EvilGenius13/kubernetes-tutorial" target="_blank">
-                <img src="/images/spell-book5.png" alt="Project Image" class="project5-image"/>
+                <img src="images/spell-book5.png" alt="Project Image" class="project5-image"/>
               </a>
               <h4>Kubernetes Tutorial</h4>
               <p>
