added work experience

--- a/index.html
+++ b/index.html
@@ -170,26 +170,23 @@
             <section id="experience">
               <h3>My Journey</h3>
               <table class="work-history">
-                <tr>
-                  <th>Job Title</th>
-                  <th>Company</th>
-                  <th>Location</th>
-                  <th>Year</th>
-                  <th>Description</th>
+                <tr class="glow-on-hover">
+                  <th>Back End Developer</th>
+                  <th>Shopify</th>
+                  <th>Aug 2022</th>
+                  <th>Building GraphQL on Ruby via efficient code</th>
                 </tr>
-                <tr>
-                  <td>Job Title 1</td>
-                  <td>Company Name 1</td>
-                  <td>Location 1</td>
-                  <td>Year Started - Year Ended</td>
-                  <td>Description of your role and achievements.</td>
+                <tr class="glow-on-hover">
+                  <td>Intern</td>
+                  <td>Campus Dive</td>
+                  <td>Jul 2023 - Oct 2023</td>
+                  <td>Building Database models, and GraphQL queries/mutations</td>
                 </tr>
-                <tr>
-                  <td>Job Title 2</td>
-                  <td>Company Name 2</td>
-                  <td>Location 2</td>
-                  <td>Year Started - Year Ended</td>
-                  <td>Description of your role and achievements.</td>
+                <tr class="glow-on-hover">
+                  <td>Financial Advisor</td>
+                  <td>TD Canada Trust</td>
+                  <td>Sep 2011 - Jul 2022</td>
+                  <td>Provided advice for Mortgages, Investments and Small Businesses</td>
                 </tr>
                 <!-- ... more rows ... -->
               </table>
