finished base layout

--- a/index.html
+++ b/index.html
@@ -144,8 +144,7 @@
                 </a>
                 <h4>TwiWarGen</h4>
                 <p>
-                  A markov generator that creates sentences from either the
-                  Twilight or World of Warcraft series.
+                  A markov generator that creates sentences from either the Twilight or World of Warcraft series.
                 </p>
               </div>
               <!-- Project 5 -->
@@ -162,8 +161,7 @@
                 </a>
                 <h4>kubernetes Tutorial</h4>
                 <p>
-                  A tutorial for those interested in learning the basics of
-                  kubernetes
+                  A tutorial for those interested in learning the basics of kubernetes
                 </p>
               </div>
             </section>
@@ -173,8 +171,8 @@
                 <tr class="glow-on-hover">
                   <th>Back End Developer</th>
                   <th>Shopify</th>
-                  <th>Aug 2022</th>
-                  <th>Building GraphQL on Ruby via efficient code</th>
+                  <th>Aug 2022 - Now</th>
+                  <th>Developed and maintained GraphQL APIs in Ruby, working directly on the Rack layer </th>
                 </tr>
                 <tr class="glow-on-hover">
                   <td>Intern</td>
@@ -193,8 +191,10 @@
             </section>
             <section id="contact">
               <h3>Connect</h3>
+              <div id="contact-list">
               <a href="https://www.twitch.tv/evilgenius88" target="_blank">
                 <img
+                  id="twitch-logo"
                   src="https://img.shields.io/static/v1?message=Twitch&logo=twitch&label=&color=9146FF&logoColor=white&labelColor=&style=for-the-badge"
                   height="35"
                   alt="twitch logo"
@@ -205,21 +205,24 @@
                 target="_blank"
               >
                 <img
+                  id="discord-logo"
                   src="https://img.shields.io/static/v1?message=Discord&logo=discord&label=&color=7289DA&logoColor=white&labelColor=&style=for-the-badge"
                   height="35"
                   alt="discord logo"
                 />
               </a>
               <a
-                href="https://www.linkedin.com/in/josh-faigan-87169832/"
+                href="https://www.linkedin.com/in/jfaigan/"
                 target="_blank"
               >
                 <img
+                  id="linkedin-logo"
                   src="https://img.shields.io/static/v1?message=LinkedIn&logo=linkedin&label=&color=0077B5&logoColor=white&labelColor=&style=for-the-badge"
                   height="35"
                   alt="linkedin logo"
                 />
               </a>
+            </div>
             </section>
           </div>
         </div>
