--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap"
       rel="stylesheet"
@@ -144,7 +144,8 @@
                 </a>
                 <h4>TwiWarGen</h4>
                 <p>
-                  A markov generator that creates sentences from either the Twilight or World of Warcraft series.
+                  A markov generator that creates sentences from either the
+                  Twilight or World of Warcraft series.
                 </p>
               </div>
               <!-- Project 5 -->
@@ -161,7 +162,8 @@
                 </a>
                 <h4>kubernetes Tutorial</h4>
                 <p>
-                  A tutorial for those interested in learning the basics of kubernetes
+                  A tutorial for those interested in learning the basics of
+                  kubernetes
                 </p>
               </div>
             </section>
@@ -169,22 +171,30 @@
               <h3>My Journey</h3>
               <table class="work-history">
                 <tr class="glow-on-hover">
-                  <th>Back End Developer</th>
-                  <th>Shopify</th>
-                  <th>Aug 2022 - Now</th>
-                  <th>Developed and maintained GraphQL APIs in Ruby, working directly on the Rack layer </th>
+                  <td class="job-title">Back End Developer</td>
+                  <td class="company">Shopify</td>
+                  <td class="date">Aug 2022 - Now</td>
+                  <td class="description">
+                    Developed and maintained GraphQL APIs in Ruby, working
+                    directly on the Rack layer
+                  </td>
                 </tr>
                 <tr class="glow-on-hover">
-                  <td>Intern</td>
-                  <td>Campus Dive</td>
-                  <td>Jul 2023 - Oct 2023</td>
-                  <td>Building Database models, and GraphQL queries/mutations</td>
+                  <td class="job-title">Intern</td>
+                  <td class="company">Campus Dive</td>
+                  <td class="date">Jul 2023 - Oct 2023</td>
+                  <td class="description">
+                    Building Database models, and GraphQL queries/mutations
+                  </td>
                 </tr>
                 <tr class="glow-on-hover">
-                  <td>Financial Advisor</td>
-                  <td>TD Canada Trust</td>
-                  <td>Sep 2011 - Jul 2022</td>
-                  <td>Provided advice for Mortgages, Investments and Small Businesses</td>
+                  <td class="job-title">Financial Advisor</td>
+                  <td class="company">TD Canada Trust</td>
+                  <td class="date">Sep 2011 - Jul 2022</td>
+                  <td class="description">
+                    Provided advice for Mortgages, Investments and Small
+                    Businesses
+                  </td>
                 </tr>
                 <!-- ... more rows ... -->
               </table>
@@ -192,37 +202,34 @@
             <section id="contact">
               <h3>Connect</h3>
               <div id="contact-list">
-              <a href="https://www.twitch.tv/evilgenius88" target="_blank">
-                <img
-                  id="twitch-logo"
-                  src="https://img.shields.io/static/v1?message=Twitch&logo=twitch&label=&color=9146FF&logoColor=white&labelColor=&style=for-the-badge"
-                  height="35"
-                  alt="twitch logo"
-                />
-              </a>
-              <a
-                href="https://discordapp.com/users/evil.genius"
-                target="_blank"
-              >
-                <img
-                  id="discord-logo"
-                  src="https://img.shields.io/static/v1?message=Discord&logo=discord&label=&color=7289DA&logoColor=white&labelColor=&style=for-the-badge"
-                  height="35"
-                  alt="discord logo"
-                />
-              </a>
-              <a
-                href="https://www.linkedin.com/in/jfaigan/"
-                target="_blank"
-              >
-                <img
-                  id="linkedin-logo"
-                  src="https://img.shields.io/static/v1?message=LinkedIn&logo=linkedin&label=&color=0077B5&logoColor=white&labelColor=&style=for-the-badge"
-                  height="35"
-                  alt="linkedin logo"
-                />
-              </a>
-            </div>
+                <a href="https://www.twitch.tv/evilgenius88" target="_blank">
+                  <img
+                    id="twitch-logo"
+                    src="https://img.shields.io/static/v1?message=Twitch&logo=twitch&label=&color=9146FF&logoColor=white&labelColor=&style=for-the-badge"
+                    height="35"
+                    alt="twitch logo"
+                  />
+                </a>
+                <a
+                  href="https://discordapp.com/users/evil.genius"
+                  target="_blank"
+                >
+                  <img
+                    id="discord-logo"
+                    src="https://img.shields.io/static/v1?message=Discord&logo=discord&label=&color=7289DA&logoColor=white&labelColor=&style=for-the-badge"
+                    height="35"
+                    alt="discord logo"
+                  />
+                </a>
+                <a href="https://www.linkedin.com/in/jfaigan/" target="_blank">
+                  <img
+                    id="linkedin-logo"
+                    src="https://img.shields.io/static/v1?message=LinkedIn&logo=linkedin&label=&color=0077B5&logoColor=white&labelColor=&style=for-the-badge"
+                    height="35"
+                    alt="linkedin logo"
+                  />
+                </a>
+              </div>
             </section>
           </div>
         </div>
